do things less stupidly

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,26 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+org.gradle.configuration-cache=false
 
-# Fabric Properties
-minecraft_version=1.21.9
-yarn_mappings=1.21.9+build.1
-loader_version=0.17.2
-fabric_version=0.134.0+1.21.9
+mod.id=substrate
+mod.name=Substrate
+mod.group=dev.vesper
+mod.version=4.1-Beta.3
+#mod.channel_tag=-alpha.0
+mod.authors=VesMaybeVesper
+mod.license=LGPL-3.0-only
+mod.description=Optimization add-on for Sodium for the bottom and/or top layer(s) of the world
+mod.sources_url=
+mod.homepage_url=
+mod.issues_url=
+mod.discord_url=
 
-# Mod Properties
-mod_version=4.1-Beta.2
-maven_group=vesper
-archives_base_name=substrate
+deps.minecraft=[VERSIONED]
+deps.fabric-api=[VERSIONED]
+deps.neoforge=[VERSIONED]
+deps.modmenu=[VERSIONED]
+deps.sodium=[VERSIONED]
 
-# Dependencies
-sodium_version=mc1.21.9-0.7.0-fabric
+publish.modrinth=
+publish.curseforge=
+publish.github=true
