fix building by disabling newer NF versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,10 @@ mod.version=4.1-Beta.3
 mod.authors=VesMaybeVesper
 mod.license=LGPL-3.0-only
 mod.description=Optimization add-on for Sodium for the bottom and/or top layer(s) of the world
-mod.sources_url=
-mod.homepage_url=
-mod.issues_url=
-mod.discord_url=
+mod.sources_url=https://github.com/vesmaybevesper/substrate/
+mod.homepage_url=https://modrinth.com/mod/substrate
+mod.issues_url=https://github.com/vesmaybevesper/substrate/issues
+mod.discord_url=https://discord.gg/pC8HxhTPK3
 
 deps.minecraft=[VERSIONED]
 deps.fabric-api=[VERSIONED]
@@ -21,6 +21,6 @@ deps.neoforge=[VERSIONED]
 deps.modmenu=[VERSIONED]
 deps.sodium=[VERSIONED]
 
-publish.modrinth=
+publish.modrinth=zNuzb72d
 publish.curseforge=
 publish.github=true
