--- a/versions/1.21.11-neoforge/gradle.properties
+++ b/versions/1.21.11-neoforge/gradle.properties
@@ -1,5 +1,5 @@
 deps.minecraft=1.21.11
-deps.neoforge=21.11.0-beta
-deps.sodium=mc1.21.11-0.8.0-neoforge
+deps.neoforge=21.11.5-beta
+deps.sodium=0.8.0+mc1.21.11
 
 publish.additionalVersions=
