--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.configuration-cache=false
 mod.id=substrate
 mod.name=Substrate
 mod.group=dev.vesper
-mod.version=4.1-Beta.5
+mod.version=4.1
 #mod.channel_tag=-alpha.0
 mod.authors=VesMaybeVesper
 mod.license=LGPL-3.0-only
