--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-stonecutter = "0.8-alpha.9"
+stonecutter = "0.8.3"
 stonecutter-postprocess = "2.1-beta.8"
 mod-publish = "0.8.4"
 dotenv-gradle = "4.0.0"
-fabric-loom = "1.13.6"
-neoforge-moddev = "2.0.123"
+fabric-loom = "1.15-SNAPSHOT"
+neoforge-moddev = "2.0.140"
 foojay = "1.0.0"
-fabric-loader= "0.18.1"
+fabric-loader= "0.18.4"
 
 [libraries]
 kikugie-postprocess = { module = "dev.kikugie:postprocess", version.ref = "stonecutter-postprocess" }
